k8s/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - name: grpc
      protocol: TCP
      port: 3094
      targetPort: 3094
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: stock-mysql-slave-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: stock-phpmyadmin-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: stock-redis-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: stock-redis-gui-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 3081
      targetPort: 8081
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: stock-fluent-bit-service
  namespace: prod
spec:
  selector:
    app: stock
  ports:
    - name: tcp
      protocol: TCP
      port: 24220
      targetPort: 24224
    - name: udp
      protocol: UDP
      port: 24220
      targetPort: 24224
  type: NodePort
